# fvwm_themed

./: LICENSE  README  README.md  install.sh  install_history.txt
fvwm/: DebianMenu  config  config_panel  config_panel_full  menudefs.hook
fvwm/scripts/: ColorsMenuList  ColorsThemeList  fvwm_menu.h  fvwm_menu_data.h  notify_desktop.py  rand_color.py  setroot_find_in_textures.py  setwallpaper.py  switch_theme.py
fvwm/scripts/data/: colors.json  gtk-main.css  pytheme.colors
fvwm/themes/: .empty
fvwm/tools/: README  image_palette_dir_2_theme_list.py  theme_database_index  theme_menu_regenerate.py
fvwm/wm-icons/: menudefs.hook
pytheme/: index.theme  readme.txt
pytheme/gtk-2.0/: gtkrc
pytheme/gtk-3.20/: gtk-main.css  gtk-widgets-assets.cssOG  gtk-widgets.cssOG
scripts/: ColorsMenu  create_textures_menu.py  expand_home_dir.py  fvwm_menu  fvwm_theme.config  setroot.sh
scripts/data/: gtk-widgets-assets.css  gtk-widgets.css
src/dockapps/: README
src/dockapps/dockapps-a1e67bd/: wmSun_mask.xbm  wmSun_master.xpm  wmsun
src/dockapps/dockapps-daaf3aa/: Makefile  Makefile.in  config.status  configure  (+2 more)
src/dockapps/wmlife-1.0.1/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.in  wmlife.1
src/dockapps/wmlife-1.0.1/src/: Makefile  Makefile.am  Makefile.in  icon.xpm  life.c  master.xpm  wmlife  wmlife.c
src/hsetroot-master/: hsetroot  hsetroot.c  hsr-outputs
src/thumb.src/: Makefile  thumb.c
tools/: image_algorithm_dir_2_theme_list.py  theme_database_regenerate.py  theme_database_source
(+69 files in other folders)
