AC_INIT(src/wmlife.c)

AM_INIT_AUTOMAKE(wmlife, 1.0.0)

AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

AC_PATH_X
AC_CHECK_LIB(X11, main)
AC_CHECK_LIB(Xext, main)

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h)

AC_C_CONST

AC_ARG_ENABLE(header, [
Wmlife options:
])

AC_ARG_ENABLE(session,
[  --enable-session                Compile with session management],
       session=on, session=off)

if test "x$session" = "xon" ; then
  AC_DEFINE(SESSION)
  LDFLAGS="$LDFLAGS -lSM -lICE"
fi
AM_CONDITIONAL(SESSION, test "x$session" = "xon")

AC_PATH_PROG(config, pkg-config)

AC_CACHE_CHECK([for gdk2 includes], GDKINCS, [GDKINCS=`$config --cflags gtk+-2.0`])
AC_CACHE_CHECK([for gdk2 libs], GDKLIBS, [GDKLIBS=`$config --libs gtk+-2.0 | sed -e "s/-lgtk-x11-2.0//g" -e "s/-latk-1.0//g"`])

CFLAGS="$CFLAGS $GDKINCS"
LDFLAGS="$LDFLAGS $GDKLIBS"

AC_OUTPUT(Makefile src/Makefile)
